# ESP32_GPS_GSM_Loger

./: GPS Loger.drawio  README.md  diagram_of_project.drawio
1. PCB/: gps_tracer.kicad_prl  gps_tracer.kicad_pro  gps_tracer.kicad_sch
1. PCB 3.1 version/: GERBER.rar  gps_tracer.kicad_pcb  gps_tracer.kicad_prl  gps_tracer.kicad_sch
1. PCB 3.1 version/GERBER/: gps_tracer-B_Cu.gbr  gps_tracer-B_Mask.gbr  gps_tracer-B_Paste.gbr  gps_tracer-B_Silkscreen.gbr  gps_tracer-Edge_Cuts.gbr  gps_tracer-F_Cu.gbr  gps_tracer-F_Mask.gbr  gps_tracer-F_Paste.gbr  gps_tracer-F_Silkscreen.gbr  gps_tracer-NPTH.drl  gps_tracer-PTH.drl  gps_tracer-job.gbrjob
2. Main GPS loger project/: .project  sdkconfig  sdkconfig.old
2. Main GPS loger project/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  http.c  http.h  main.c  main.h  wifi.h
2. Main GPS loger project/main/gps/: main_gps.c  main_gps.h
2. Main GPS loger project/main/gsm/: gsm_sim800l.c  gsm_sim800l.h
2. Main GPS loger project/main/leds_gpio/: leds_gpio.c  leds_gpio.h
2. Main GPS loger project/main/microsd/: mount.c  mount.h
2. Main GPS loger project/main/wifi/: http.c  http.h  wifi.c  wifi.h
Parts projects/1. BME280/: .cproject  sdkconfig  sdkconfig.old
Parts projects/1. BME280/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  main.c  main.h
Parts projects/1. BME280/main/leds_gpio/: gpio.c
Parts projects/2. GPS/: .project  sdkconfig
Parts projects/2. GPS/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  main.c  main.h
Parts projects/3. Micro SD card/: .project  CMakeLists.txt  sdkconfig.ci  sdkconfig.ci.old  sdkconfig.old
Parts projects/3. Micro SD card/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  main.c  main.h
Parts projects/4. SIM800L/: .cproject  .project  sdkconfig  sdkconfig.old
Parts projects/4. SIM800L/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  main.c  main.h
Parts projects/4. SIM800L/main/gsm/: gsm_sim800l.c  gsm_sim800l.h
Parts projects/4. SIM800L/main/leds_gpio/: gpio.c  gpio.h
Parts projects/6. Web server/1. Simple web server/: .project  sdkconfig  sdkconfig.old
Parts projects/6. Web server/11. HTTP file server SPIFFS/: sdkconfig.old
Parts projects/6. Web server/13. HTTP file server/main/: CMakeLists.txt  Kconfig.projbuild  main.c
Parts projects/6. Web server/13. HTTP file server/main/mount/: mount.c
Parts projects/6. Web server/13. HTTP file server/main/wifi/: http.c  http.h
(+78 files in other folders)
